# phantom

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
bench_results/: phantom_2026-05-31.txt
crates/acs/: Cargo.toml
crates/acs/src/: device.rs  lib.rs  sanity.rs
crates/api/: Cargo.toml
crates/api/src/: lib.rs
crates/bench/: Cargo.toml
crates/bench/benches/: coherence.rs  serving.rs
crates/bench/src/: lib.rs
crates/coherence/: Cargo.toml
crates/coherence/src/: engine.rs  entry.rs  lib.rs  routing.rs  sync.rs
crates/coherence/tests/: coherence.rs
crates/kv/: Cargo.toml
crates/kv/src/: block.rs  cache.rs  lib.rs  trie.rs
crates/kv/tests/: kvcache.rs
crates/phantom/: Cargo.toml
crates/phantom/src/: main.rs
crates/router/: Cargo.toml
crates/router/src/: lib.rs
crates/scheduler/: Cargo.toml
crates/scheduler/src/: lib.rs
crates/scheduler/tests/: scheduler.rs
dafny/: KvInvariant.dfy
scripts/: baseline_benchmark.py  bench_throughput.sh  requirements.txt
tla/: TokenCoherence.cfg  TokenCoherence.tla
