[workspace]
resolver = "2"
members = [
    "crates/acs",
    "crates/kv",
    "crates/coherence",
    "crates/router",
    "crates/scheduler",
    "crates/api",
    "crates/bench",
    "crates/phantom",
]

[workspace.dependencies]
metal      = "0.29"
proptest   = "1"
tokio      = { version = "1", features = ["full"] }
axum       = "0.7"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
criterion  = { version = "0.5", features = ["html_reports"] }
