[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
coherence  = { path = "../coherence" }
scheduler  = { path = "../scheduler" }
kv         = { path = "../kv" }
axum       = { workspace = true }
tokio      = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
anyhow     = { workspace = true }

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
