[package]
name = "bench"
version = "0.1.0"
edition = "2021"

[dependencies]

[dev-dependencies]
criterion  = { workspace = true }
scheduler  = { path = "../scheduler" }
kv         = { path = "../kv" }
coherence  = { path = "../coherence" }
metal      = { workspace = true }
proptest   = { workspace = true }

[[bench]]
name    = "serving"
harness = false

[[bench]]
name    = "coherence"
harness = false
